--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
+    "firebase-admin": "^13.0.0",
     "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.25.1",
