--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ionic/pwa-elements": "^3.3.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
     "firebase-admin": "^13.0.0",
     "imagesloaded": "^5.0.0",
+    "ionicons": "^7.4.0",
     "masonry-layout": "^4.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.4.0",
     "react-masonry-css": "^1.0.16",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.25.1",
     "uuid": "^10.0.0"
   },
@@ -29,6 +32,7 @@
     "@types/masonry-layout": "^4.2.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
