--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^13.0.0",
     "imagesloaded": "^5.0.0",
     "ionicons": "^7.4.0",
+    "lodash": "^4.17.21",
     "masonry-layout": "^4.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/imagesloaded": "^4.1.6",
+    "@types/lodash": "^4.17.16",
     "@types/masonry-layout": "^4.2.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
