--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ionic/pwa-elements": "^3.3.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
+    "date-fns": "^4.1.0",
     "firebase": "^10.12.4",
     "firebase-admin": "^13.0.0",
     "imagesloaded": "^5.0.0",
