--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "imagesloaded": "^5.0.0",
     "ionicons": "^7.4.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.513.0",
     "masonry-layout": "^4.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
